validacion en registro de empresa y navbar fixed-top inicial

--- a/weedWeb/src/app/components/menubar/components.component.html
+++ b/weedWeb/src/app/components/menubar/components.component.html
@@ -36,7 +36,7 @@
   </div>
 </nav> -->
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand">
       <img
@@ -64,6 +64,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Login">Inicio de sesión</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#beneficios">Beneficios</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#semillas">Semillas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#desarrollo">Team </a>
