--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -56,7 +56,7 @@
   </div>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar fixed-up navbar-expand-lg  navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand">
       <!-- <img src="../../../assets/image/logo.png" width="75 " height="75 " /> -->
@@ -85,10 +85,7 @@
     <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="/Info">Quiénes somos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/Catalogo">Catalogo</a>
+          <a class="nav-link" href=" ">Hola, </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Login">Cerrar sesión</a>
