--- a/weedWeb/src/app/home/home.component.css
+++ b/weedWeb/src/app/home/home.component.css
@@ -1,3 +1,4 @@
+
 nav {
   padding: 10px;
 }
@@ -61,6 +62,10 @@ nav {
   justify-content: space-between;
 }
 
+.bigBox{
+  padding-top: 80px;
+}
+
 .carousel-caption {
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 5px;
@@ -74,7 +79,6 @@ nav {
 
 .carousel-item {
   width: 100%;
-
   height: 100%;
 }
 
@@ -102,7 +106,6 @@ nav {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  opacity: 1;
   z-index: -1;
 }
 
@@ -148,12 +151,12 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6); /* color oscuro con opacidad */
+  /* background-color: rgba(0, 0, 0, 1); */
 }
 
-.box:hover:before {
+/* .box:hover:before {
   opacity: 1;
-}
+} */
 /* Estilos para el contenido del div */
 .cuadro-opaco p {
   color: white;
@@ -183,11 +186,6 @@ nav {
   text-align: center;
   line-height: 24px;
 }
-
-/* .back{
-  width: 20px;
-  background-color: #424143;
-} */
 
 .tittle2 h1{
   font-size: 35px;
@@ -236,18 +234,6 @@ nav {
   position: relative;
   z-index: 100;
 }
-
-/* .swiper{
-  width: 950px;
-} */
-
-/* section {
-  position: relative;
-  width: 450%;
-  height: 1075px;
-  display: flex;
-  align-items: center;
-} */
 
 section .card .image{
   height: 140px;
@@ -315,4 +301,44 @@ section .card .about{
   color: #444;
   margin-top: 30px;
   margin-bottom: 5px;
+}
+
+.containerSeeds{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+ .boxSeed{
+  position: relative;
+  width: 20rem;
+  height: 20rem;
+  margin: 3rem;
+}
+
+.boxSeed:hover .imgBox{
+  transform: translate(-1.5rem, -1.5rem);
+}
+
+.boxSeed:hover .contentBox{
+  transform: translate(3.5rem, 3.5rem);
+}
+
+.imgBox{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  transition: all 0.5s ease-in-out;
+}
+
+.imgBox img{
+  width: 20rem;
+  height: 20rem;
+  resize: cover;
+  object-fit: cover;
 }
