--- a/weedWeb/src/app/components/menubaruser/menubaruser.component.html
+++ b/weedWeb/src/app/components/menubaruser/menubaruser.component.html
@@ -24,25 +24,7 @@
       <li class="nav-item">
         <a class="nav-link" href="/Time">Pronostíco de tiempo</a>
       </li>
-      <!-- <li class="nav-item dropdown">
-        <a
-          class="nav-link dropdown-toggle"
-          href="#"
-          role="button"
-          data-bs-toggle="dropdown"
-          aria-expanded="false"
-        >
-          Dropdown
-        </a>
-        <ul class="dropdown-menu dropdown-menu-dark">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li>
-            <hr class="dropdown-divider" />
-          </li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
-        </ul>
-      </li> -->
+
     </ul>
     <form class="d-flex mt-3" role="search">
       <input
@@ -85,7 +67,7 @@
     <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href=" ">Hola, </a>
+          <a class="nav-link" href=" ">Hola, {{userName}} </a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/Login">Cerrar sesión</a>
