--- a/weedWeb/src/app/map/map.component.css
+++ b/weedWeb/src/app/map/map.component.css
@@ -66,3 +66,26 @@
   margin-right: auto;
   margin-top: 5vmin;
 }
+.parcela{
+  text-align: center;
+  justify-content: center;
+
+}
+.farmID{
+
+}
+.seedName{
+
+}
+
+.textInformation{
+  text-align: left;
+}
+.width{
+
+}
+.length{
+
+}
+
+.cropModality{}
