--- a/weedWeb/src/app/login/login.component.css
+++ b/weedWeb/src/app/login/login.component.css
@@ -152,3 +152,22 @@ a:hover {
   text-align: center;
   color: #000000;
 }
+
+.buttonLink{
+  background: none;
+  border: none;
+  padding: 0;
+  font: inherit;
+  color: blue; /* Color del enlace */
+  text-decoration: underline; /* Subrayado del enlace */
+  cursor: pointer;
+
+}
+.botones{
+  text-align: center;
+  display: flex;
+}
+
+
+
+
