--- a/weedWeb/src/app/login/login.component.html
+++ b/weedWeb/src/app/login/login.component.html
@@ -111,12 +111,37 @@
           </div>
 
           <div class="col-md-10 my-2">
-            <a href="/Register">Registrar usuario</a>
+            <button class="buttonLink" (click)="showModal()">Registrarse</button>
           </div>
-
-          <a href="/RegisterCompany">Registrar empresa</a>
         </form>
       </div>
+      <p-dialog
+      [(visible)]="visibleA"
+      [style]="{ width: '50vw' }"
+      [modal]="true"
+      class="model"
+      styleClass="p-fluid"
+      [baseZIndex]="999"
+    >
+    <h2 class="text-center">¿Cómo te quieres registrar?</h2>
+    <br />
+    <div class="boton1">
+  <button
+    type="submit"
+    class="btn btn-primary btn-block ml-6"
+    (click)="registerCompany()"
+  >
+    Registrar empresa
+  </button>
+  <button
+    type="submit"
+    class="btn btn-primary btn-block mt-10"
+    (click)="registerUser()"
+  >
+    Registrar usuario
+  </button>
+</div>
+    </p-dialog>
     </div>
   </div>
 </div>
