--- a/weedWeb/src/app/map/map.component.html
+++ b/weedWeb/src/app/map/map.component.html
@@ -115,9 +115,8 @@
           </div>
         </ng-template>
       </p-table>
+      <div class="parcela">
       <p-dialog
-
-      header="Creación de parcela"
       [(visible)]="visibleCreateFarm"
       [style]="{ width: '50vw' }"
       [modal]="true"
@@ -125,49 +124,59 @@
       styleClass="p-fluid"
       [baseZIndex]="999"
       >
+      <h2 class="text-center">Crea tus parcelas</h2>
       <form (ngSubmit)="onSubmit()">
-        <div>
-          <label for="farmId">Farm ID:</label>
+        <div class="farmID">
+          <label for="farmId">Identificador de la granja:</label>
           <input type="number" id="farmId" name="farmId" [(ngModel)]="farmId" required [disabled]="true">
         </div>
+        <br>
 
-        <div>
-          <label for="seedName">Seed Name:</label>
+        <div class="seedName">
+          <label for="seedName">Nombre de la semilla:</label>
           <select id="seedName" name="seedName" [(ngModel)]="seedName" (ngModelChange)="onSeedNameChange()" required>
             <option value="">Seleccione una opción</option>
             <option *ngFor="let option of seedOptions" [value]="option.species_name">{{ option.species_name }}</option>
           </select>
         </div>
 
-        <div *ngIf="selectedOption">
+        <br>
+        <div class="texInformation">
+        <div class="text-center" *ngIf="selectedOption">
           <h3>Información:</h3>
           <p>Descripción: {{ selectedOption.description }}</p>
-          <p>CBD: {{ selectedOption.cbd }}</p>
-          <p>THC: {{ selectedOption.thc }}</p>
+          <p>CBD: {{ selectedOption.cbd }} %</p>
+          <p>THC: {{ selectedOption.thc }} %</p>
         </div>
+      </div>
 
-
-        <div>
-          <label for="width">Width:</label>
+        <div class="width">
+          <label for="width">Ancho: </label>
           <input type="number" id="width" name="width" [(ngModel)]="width" required>
         </div>
+        <br>
 
-        <div>
-          <label for="length">Length:</label>
+        <div class="length">
+          <label for="length">Altura: </label>
           <input type="number" id="length" name="length" [(ngModel)]="length" required>
         </div>
+        <br>
 
-        <label for="cropModality">cropModality:</label>
+        <div class="cropModality">
+        <label for="cropModality">Modalidad de cultivo:</label>
+
         <select id="cropModality" name="cropModality" [(ngModel)]="cropModality"  required>
-          <option value="">Seleccione una opción</option>
-          <option value="Indoor">indoor</option>
-          <option value="Outdoor">outdoor</option>
+          <option class="dropdown-item" value="">Seleccione una opción</option>
+          <option class="dropdown-item" value="Indoor">Interior</option>
+          <option class="dropdown-item" value="Outdoor">Exterior</option>
         </select>
+      </div>
 
-        <button type="submit">Enviar</button>
+      <br>
+        <button class="btn btn-primary btn-block" type="submit">Enviar</button>
       </form>
-
       </p-dialog>
+    </div>
 
       <!--nombre_variable despues en type script -->
        <p-dialog header="Información granjas - {{product_farm}} "
@@ -258,7 +267,6 @@
         </ng-template>
       </p-table>
       </p-dialog>
-
     </div>
   </p-card>
 </div>
