--- a/weedWeb/src/app/home/home.component.html
+++ b/weedWeb/src/app/home/home.component.html
@@ -131,7 +131,7 @@
         <div class="box2">
           <div class="card-content">
             <div class="image">
-              <img src="../../assets/image/mayra.png" alt="Imagen">
+              <img src="../../assets/image/mayra.jpg" alt="Imagen">
             </div>
             <div class="name-profession">
               <span class="name">Mayra Sanchez</span>
