--- a/weedWeb/src/app/login/login.component.html
+++ b/weedWeb/src/app/login/login.component.html
@@ -67,7 +67,7 @@
           <h2 class="text-center">Iniciar sesión</h2>
 
           <div class="form-group">
-            <label for="username" class="letter">Nombre de usuario:</label>
+            <label for="username" class="letter">Correo electrónico:</label>
             <div class="col-md-10">
               <input
                 type="email"
