--- a/weedWeb/src/app/map/map.component.css
+++ b/weedWeb/src/app/map/map.component.css
@@ -91,3 +91,33 @@
 }
 
 .cropModality{}
+
+
+.model {
+  background-color: #fff;
+  border-radius: 4px;
+
+}
+
+.text-center {
+  text-align: center;
+}
+
+.label {
+  font-weight: bold;
+}
+
+.value {
+  color: blue;
+}
+
+.width,
+.length,
+.cropModality {
+  margin-bottom: 10px;
+}
+
+.btn-block {
+  width: 50%;
+  padding: 10
+}
