--- a/weedWeb/src/app/dashboard/dashboard.component.html
+++ b/weedWeb/src/app/dashboard/dashboard.component.html
@@ -41,9 +41,11 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">
-                    New users
+                    Ubicación longitud:
                   </h5>
-                  <span class="h2 font-weight-bold mb-0">2,356</span>
+                  <span class="h2 font-weight-bold mb-0">{{long}}
+
+                    </span>
                 </div>
                 <div class="col-auto">
                   <div
@@ -55,9 +57,8 @@
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-danger mr-2"
-                  ><i class="fas fa-arrow-down"></i> 3.48%</span
+                  ><i class="fas fa-arrow-down"></i> </span
                 >
-                <span class="text-nowrap">Since last week</span>
               </p>
             </div>
           </div>
@@ -68,9 +69,9 @@
               <div class="row">
                 <div class="col">
                   <h5 class="card-title text-uppercase text-muted mb-0">
-                    Sales
+                    Ubicación latitud: :
                   </h5>
-                  <span class="h2 font-weight-bold mb-0">924</span>
+                  <span class="h2 font-weight-bold mb-0">{{latitude}}</span>
                 </div>
                 <div class="col-auto">
                   <div
@@ -82,40 +83,13 @@
               </div>
               <p class="mt-3 mb-0 text-muted text-sm">
                 <span class="text-warning mr-2"
-                  ><i class="fas fa-arrow-down"></i> 1.10%</span
+                  ><i class="fas fa-arrow-down"></i> </span
                 >
-                <span class="text-nowrap">Since yesterday</span>
               </p>
             </div>
           </div>
         </div>
-        <div class="col-xl-3 col-lg-6">
-          <div class="card card-stats mb-4 mb-xl-0">
-            <div class="card-body">
-              <div class="row">
-                <div class="col">
-                  <h5 class="card-title text-uppercase text-muted mb-0">
-                    Performance
-                  </h5>
-                  <span class="h2 font-weight-bold mb-0">49,65%</span>
-                </div>
-                <div class="col-auto">
-                  <div
-                    class="icon icon-shape bg-info text-white rounded-circle shadow"
-                  >
-                    <i class="fas fa-percent"></i>
-                  </div>
-                </div>
-              </div>
-              <p class="mt-3 mb-0 text-muted text-sm">
-                <span class="text-success mr-2"
-                  ><i class="fas fa-arrow-up"></i> 12%</span
-                >
-                <span class="text-nowrap">Since last month</span>
-              </p>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
   </div>
@@ -128,7 +102,15 @@
           <div class="row align-items-center">
             <div class="col">
               <h6 class="text-black text-light ls-1 mb-1">Datos</h6>
-              <h2 class="text-black mb-0">Temperatura</h2>
+              <h2 class="text-black mb-0">Temperatura °C </h2>
+              <select id="seedName" name="days" [(ngModel)]="daysSelecte" (ngModelChange)="onSeedNameChangeDay(daysSelecte)"  required>
+                <option value="1">1 Día  </option>
+                <option value="3">3 Días </option>
+
+                <option value="7">7 Días  </option>
+                <option value="14">14 Días  </option>
+                <option value="16">1 Días  </option>
+              </select>
             </div>
             <div class="col">
               <ul class="nav nav-pills justify-content-end">
@@ -157,227 +139,80 @@
         </div>
       </div>
     </div>
-    <div class="col-xl-4">
-      <div class="card shadow">
-        <div class="card-header bg-transparent">
-          <div class="row align-items-center">
-            <div class="col">
-              <h6 class="text-uppercase text-muted ls-1 mb-1">Performance</h6>
-              <h2 class="mb-0">Precipitación</h2>
+    <div class="row mt-5">
+      <div class="col-xl-8 mb-5 mb-xl-0">
+        <div class="card shadow">
+          <div class="card-header border-0">
+            <div class="row align-items-center">
+              <div class="col">
+                <h3 class="mb-0">Precipitacion %</h3>
+              </div>
+              <div class="col">
+                <ul class="nav nav-pills justify-content-end">
+                  <li
+                    class="nav-item mr-2 mr-md-0"
+                    data-toggle="chart"
+                    data-target="#chart-sales"
+                  ></li>
+                  <li
+                    class="nav-item"
+                    data-toggle="chart"
+                    data-target="#chart-sales"
+                  ></li>
+                </ul>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card-body">
-          <!-- Chart -->
-          <div class="chart">
-            <canvas id="temperatura" class="chart-canvas"></canvas>
+          <div class="card-body">
+            <!-- Chart -->
+            <div class="chart">
+              <!-- Chart wrapper -->
+              <div class="chart-container">
+                <canvas id="precipitacion">{{ chart }}</canvas>
+              </div>
+            </div>
           </div>
+
+
         </div>
       </div>
-    </div>
-  </div>
   <div class="row mt-5">
     <div class="col-xl-8 mb-5 mb-xl-0">
       <div class="card shadow">
         <div class="card-header border-0">
           <div class="row align-items-center">
             <div class="col">
-              <h3 class="mb-0">Page visits</h3>
+              <h3 class="mb-0">Humedad %</h3>
             </div>
-            <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">See all</a>
-            </div>
-          </div>
-        </div>
-        <div class="table-responsive">
-          <!-- Projects table -->
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Page name</th>
-                <th scope="col">Visitors</th>
-                <th scope="col">Unique users</th>
-                <th scope="col">Bounce rate</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">/argon/</th>
-                <td>4,569</td>
-                <td>340</td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> 46,53%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">/argon/index.html</th>
-                <td>3,985</td>
-                <td>319</td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> 46,53%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">/argon/charts.html</th>
-                <td>3,513</td>
-                <td>294</td>
-                <td>
-                  <i class="fas fa-arrow-down text-warning mr-3"></i> 36,49%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">/argon/tables.html</th>
-                <td>2,050</td>
-                <td>147</td>
-                <td>
-                  <i class="fas fa-arrow-up text-success mr-3"></i> 50,87%
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">/argon/profile.html</th>
-                <td>1,795</td>
-                <td>190</td>
-                <td>
-                  <i class="fas fa-arrow-down text-danger mr-3"></i> 46,53%
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-    <div class="col-xl-4">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <div class="row align-items-center">
             <div class="col">
-              <h3 class="mb-0">Social traffic</h3>
-            </div>
-            <div class="col text-right">
-              <a href="#!" class="btn btn-sm btn-primary">See all</a>
+              <ul class="nav nav-pills justify-content-end">
+                <li
+                  class="nav-item mr-2 mr-md-0"
+                  data-toggle="chart"
+                  data-target="#chart-sales"
+                ></li>
+                <li
+                  class="nav-item"
+                  data-toggle="chart"
+                  data-target="#chart-sales"
+                ></li>
+              </ul>
             </div>
           </div>
         </div>
-        <div class="table-responsive">
-          <!-- Projects table -->
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Referral</th>
-                <th scope="col">Visitors</th>
-                <th scope="col"></th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Facebook</th>
-                <td>1,480</td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">60%</span>
-                    <div>
-                      <div class="progress">
-                        <div
-                          class="progress-bar bg-gradient-danger"
-                          role="progressbar"
-                          aria-valuenow="60"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          style="width: 60%"
-                        ></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Facebook</th>
-                <td>5,480</td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">70%</span>
-                    <div>
-                      <div class="progress">
-                        <div
-                          class="progress-bar bg-gradient-success"
-                          role="progressbar"
-                          aria-valuenow="70"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          style="width: 70%"
-                        ></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Google</th>
-                <td>4,807</td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">80%</span>
-                    <div>
-                      <div class="progress">
-                        <div
-                          class="progress-bar bg-gradient-primary"
-                          role="progressbar"
-                          aria-valuenow="80"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          style="width: 80%"
-                        ></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">Instagram</th>
-                <td>3,678</td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">75%</span>
-                    <div>
-                      <div class="progress">
-                        <div
-                          class="progress-bar bg-gradient-info"
-                          role="progressbar"
-                          aria-valuenow="75"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          style="width: 75%"
-                        ></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-              <tr>
-                <th scope="row">twitter</th>
-                <td>2,645</td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <span class="mr-2">30%</span>
-                    <div>
-                      <div class="progress">
-                        <div
-                          class="progress-bar bg-gradient-warning"
-                          role="progressbar"
-                          aria-valuenow="30"
-                          aria-valuemin="0"
-                          aria-valuemax="100"
-                          style="width: 30%"
-                        ></div>
-                      </div>
-                    </div>
-                  </div>
-                </td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="card-body">
+          <!-- Chart -->
+          <div class="chart">
+            <!-- Chart wrapper -->
+            <div class="chart-container">
+              <canvas id="humedad">{{ chart }}</canvas>
+            </div>
+          </div>
         </div>
+
+
       </div>
     </div>
+
   </div>
 </div>
