--- a/weedWeb/src/app/map/map.component.css
+++ b/weedWeb/src/app/map/map.component.css
@@ -121,3 +121,31 @@
   width: 50%;
   padding: 10
 }
+
+.seedName1,
+.width1,
+.length1,
+.cropModality1{
+  margin-left: 300px;
+}
+
+.boton{
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+  border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+  display: block;
+  width: 100%;
+}
