--- a/weedWeb/src/app/map/map.component.html
+++ b/weedWeb/src/app/map/map.component.html
@@ -214,8 +214,57 @@
       </p-dialog>
       <p-dialog [(visible)]="editVisibleParcel" [style]="{ width: '50vw' }" [modal]="true" class="model"
       styleClass="p-fluid" [baseZIndex]="999">
+      <h2 class="text-center">Edita tu parcela</h2>
+          <br />
+          <form (ngSubmit)="onSubmit2()">
 
-<!-- Crear dialog para editar parcelas -->
+            <br>
+
+            <div class="seedName1">
+              <label for="seedName">Nombre de la semilla:&nbsp;</label>
+              <select id="seedName" name="seedName" [(ngModel)]="seedName" (ngModelChange)="onSeedNameChange()"
+                required>
+                <option value="">Seleccione una opción</option>
+                <option *ngFor="let option of seedOptions" [value]="option.species_name">{{ option.species_name }}
+                </option>
+              </select>
+            </div>
+
+            <br>
+            <div class="texInformation">
+              <div class="text-center" *ngIf="selectedOption">
+                <h3>Información:</h3>
+                <p>Descripción: {{ selectedOption.description }}</p>
+                <p>CBD: {{ selectedOption.cbd }} %</p>
+                <p>THC: {{ selectedOption.thc }} %</p>
+              </div>
+            </div>
+
+            <div class="width1">
+              <label for="width">Ancho:&nbsp;</label>
+              <input type="number" id="width" name="width" [(ngModel)]="width" required>
+            </div>
+            <br>
+
+            <div class="length1">
+              <label for="length">Largo:&nbsp;</label>
+              <input type="number" id="length" name="length" [(ngModel)]="length" required>
+            </div>
+            <br>
+
+            <div class="cropModality1">
+              <label for="cropModality">Modalidad de cultivo:&nbsp;</label>
+
+              <select id="cropModality" name="cropModality" [(ngModel)]="cropModality" required>
+                <option class="dropdown-item" value="">Seleccione una opción</option>
+                <option class="dropdown-item" value="Indoor">Interior</option>
+                <option class="dropdown-item" value="Outdoor">Exterior</option>
+              </select>
+            </div>
+
+            <br>
+            <button class="boton" type="submit">Editar</button>
+          </form>
 
       </p-dialog>
     </div>
